infrastracture/vnet.tf
resource "azurerm_virtual_network" "vnet" {
  name                = "vnet-iustin"
  location            = azurerm_resource_group.rg.location
  resource_group_name = azurerm_resource_group.rg.name
  address_space       = ["10.0.0.0/16"]
  dns_servers         = ["10.0.0.4", "10.0.0.5"]
}
